Create streams and paths using Files and Paths, to make more compatible with FS ops
Bump version for release